--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "development": "http-server src",
     "api-mock": "node api-mock"
   },
   "author": "Andreas Wiermann Casas",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "http-server": "^0.9.0"
   }
 }
