--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Andreas Wiermann Casas",
   "license": "ISC",
   "devDependencies": {
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "http-server": "^0.9.0"
   }
